--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Frontend</title>
@@ -7,7 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
+  <!-- Agrega la biblioteca de la API de Google Maps aquí -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6XJlR5L8wc0Z9e4UckHi3vPX_fd-eJm8&libraries=places"></script>
 </body>
+
 </html>
